# protoxy

./: Cargo.toml  Readme.md  pyproject.toml
.env/: pyvenv.cfg
.github/: dependabot.yml
.github/workflows/: CI.yml
python/protoxy/: __init__.py  errors.py  importer.py
src/: comments2option.rs  lib.rs  typing_stub.rs
src/path_resolver/: mod.rs  protobuf.rs  tag.rs
test/: test_basic.py  test_comments2options.py  test_errors.py  utils.py
