[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "protoxy"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["protobuf~=5.27.2"]

dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "protoxy._protoxy"